# key-statics

./: .gitignore  CMakeLists.txt  README.md  resources.rc
layouts/: 104keys.json  dfjk.json  wasd-mouse.json  wasd.json
src/: config.cpp  config.h  httpserver.cpp  httpserver.h  keyboardhook.cpp  keyboardhook.h  keylayout.cpp  keylayout.h  keystats.cpp  keystats.h  main.cpp  mainwindow.cpp  mainwindow.h  mousehook.cpp  mousehook.h  previewwindow.cpp  previewwindow.h  systray.cpp  systray.h  virtualkeyboard.cpp  virtualkeyboard.h
